adding benefits module and bootstrap icons

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,8 +16,8 @@
       </div>
     </div>
   </div>
-  <div class="text-center mt-2">
-    Copyright @ Team XY
+  <div class="text-center py-2">
+    Copyright 2020 @ Team Yoshi
   </div>
 
 </footer>
