--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <a type="button" class="btn btn-secondary mb-3" href="#"><i class="bi bi-arrow-left-circle-fill"> </i> Zurück</a>
+    
     <form>
 
         <!-- Feld 1 -->
@@ -34,5 +36,7 @@
           </div>
         
     </form>
+
+    <a type="button" class="btn btn-primary mt-3" href="#">Speichern <i class="bi bi-save-fill"> </i> </a>
 </div>
 
