--- a/src/app/slideshow/slideshow.component.html
+++ b/src/app/slideshow/slideshow.component.html
@@ -6,10 +6,10 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active center">
-        <img src="assets/work1.jpg" class="d-block w-50 rounded mx-auto d-block" alt="...">
+        <img src="assets/work1.jpg" class="w-50 rounded d-block mx-auto"  alt="...">
       </div>
       <div class="carousel-item center">
-        <img src="assets/work2.jpg" class="d-block w-50 rounded mx-auto " alt="...">
+        <img src="assets/work2.jpg" class="w-50 rounded d-block mx-auto" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
