--- a/src/app/welcome-message/welcome-message.component.html
+++ b/src/app/welcome-message/welcome-message.component.html
@@ -1,6 +1,3 @@
-
-
-
 <div class="card w-100 mt-3 mb-3">
     <div class="card-body">
       <h5 class="card-title"> Herzlich Willkommen beim HappyDesk! </h5>
@@ -15,5 +12,7 @@
 <app-slideshow >
 
 </app-slideshow>
+
+<app-benefits></app-benefits>
 
 
