mock user implemented

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,5 +5,11 @@
         <img src="assets/bbk_logo.png" altwidth="30" height="30" alt="">
           HappyDesk
       </a>
+
+      <div class="d-flex">
+        <p class="text-light mx-auto my-auto">Max Mustermann</p>>
+        <i class="bi bi-person-circle me-2 text-light" style="font-size: 2rem;"></i>
+      </div>
+      
     </div>    
   </nav>
