--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,22 +1,22 @@
-<footer class="footer ">
+<footer class="footer bg-dark text-light">
   <hr>
-  <div class="container">
+  <div class="container bg-dark">
     <div class="row">
       <div class="col-sm text-center">
         <h6>Hilfe</h6>
         <a href="">Q&A</a>
       </div>
       <div class="col-sm text-center">
-        <h6>Kontakt</h6>
+        <h5>Kontakt</h5>
         <p>UHD: Tel.Nr 069 9566 2323</p>
       </div>
       <div class="col-sm text-center">
-        <h6>Links</h6>
+        <h5>Links</h5>
         <a href="">Intranet </a>
       </div>
     </div>
   </div>
-  <div class="text-center py-2">
+  <div class="bg-dark text-center py-2">
     Copyright 2020 @ Team Yoshi
   </div>
 
