UX improvements / Navbar and welcome message

--- a/src/app/benefits/benefits.component.html
+++ b/src/app/benefits/benefits.component.html
@@ -1,12 +1,14 @@
 <div class="card mt-3">
-    <div class="container px-5 py-1" id="icon-grid">
   
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+    <div class="container px-5 py-1" id="icon-grid">
+      <h3 class="card-title mt-2"> <i class="bi bi-question-circle-fill me-2" ></i> Wie funktioniert der HappyDesk? </h3>
+  
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-3">
         <div class="col d-flex align-items-start">
           <i class="bi bi-calendar-week me-2" style="font-size: 2rem;"></i>
           <div>
             <h4 class="fw-bold mb-0">Besuch planen</h4>
-            <p>Paragraph of text beneath the heading to explain the heading.</p>
+            <p>Überlege dir, wann du in den nächsten Tagen in die Bundesbank gehen möchtes. Melde dich mindestens einen Tag vor dem Besuch im Büro an! </p>
             <button type="button" class="btn btn-primary">Primary</button>
           </div>
         </div>
@@ -14,21 +16,21 @@
             <i class="bi bi-pc-display me-2" style="font-size: 2rem;"></i>
           <div>
             <h4 class="fw-bold mb-0"> Arbeitsplatz auswählen  </h4>
-            <p>Paragraph of text beneath the heading to explain the heading.</p>
+            <p> Nutze die praktische Filterung des HappyDesks und suche dir den passenden Arbeitsplatz für deinen Diensttag aus! </p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
             <i class="bi bi-chat-right-quote me-2" style="font-size: 2rem;"></i>
           <div>
             <h4 class="fw-bold mb-0"> Zuteilung erhalten </h4>
-            <p>Paragraph of text beneath the heading to explain the heading.</p>
+            <p> Das System teilt dir am Morgen des Besuchs im Büro deinen Arbeitsplatz zu. </p>
           </div>
         </div>
         <div class="col d-flex align-items-start">
             <i class="bi bi-people me-2" style="font-size: 2rem;"></i>
           <div>
             <h4 class="fw-bold mb-0"> Entspannt zur Arbeit gehen! </h4>
-            <p>Paragraph of text beneath the heading to explain the heading.</p>
+            <p> Freue dich auf einen tollen Tag im Büro! </p>
           </div>
         </div>
         
