--- a/src/app/welcome-message/welcome-message.component.html
+++ b/src/app/welcome-message/welcome-message.component.html
@@ -3,7 +3,7 @@
       <h5 class="card-title"> Herzlich Willkommen beim HappyDesk! </h5>
       <p class="card-text">Bitte wählen Sie im Folgenden Ihre Präferenzen aus oder lassen Sie sich einen Arbeitsplatz zuweisen</p>
       
-      <a href="#" class="btn btn-primary ">Platz zuweisen lassen </a>
+      <a href="#" class="btn btn-primary ">Arbeitsplatz suchen </a>
 
       <a href="preferences" class="btn btn-secondary ms-2"> Präferenzen wählen! </a>
     </div>
