--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark mb-3">
 
-    <div class="container-fluid">
+    <div class="container-fluid container">
       <a class="navbar-brand" href="#">
         <img src="assets/bbk_logo.png" altwidth="30" height="30" alt="">
           HappyDesk
