--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       </a>
 
       <div class="d-flex">
-        <p class="text-light mx-auto my-auto">Max Mustermann</p>>
+        <a class="text-light mx-auto my-auto" href="login">Anmelden</a>>
         <i class="bi bi-person-circle me-2 text-light" style="font-size: 2rem;"></i>
       </div>
       
