--- a/src/app/welcome-message/welcome-message.component.html
+++ b/src/app/welcome-message/welcome-message.component.html
@@ -1,11 +1,13 @@
 <div class="card w-100 mt-3 mb-3">
     <div class="card-body">
       <h5 class="card-title"> Herzlich Willkommen beim HappyDesk! </h5>
-      <p class="card-text">Bitte wählen Sie im Folgenden Ihre Präferenzen aus oder lassen Sie sich einen Arbeitsplatz zuweisen</p>
+      <p class="card-text">Bitte melden Sie sich im Folgenden für den HappyDesk an, um sich Ihren Arbeitsplatz zuweisen zu können</p>
       
-      <a href="#" class="btn btn-primary ">Arbeitsplatz suchen </a>
+      <div class="text-center">
+        <a href="/login" class="btn btn-primary my-auto mx-auto btn-lg"> Anmelden </a>
+      </div>
+      
 
-      <a href="preferences" class="btn btn-secondary ms-2"> Präferenzen wählen! </a>
     </div>
   </div>
 
