adding dialogue module for user inputs

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,5 +15,5 @@
         <input type="checkbox" value="remember-me"> Anmeldedaten speichern
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Anmelden</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit" routerLink="/dialogue">Anmelden</button>
   </form>
