initiated user dialouge

--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -1,1 +1,62 @@
-<p>dialogue works!</p>
+<div class="card my-2">
+    <div class="container py-2">
+        <div class="row">
+          <div class="col-sm">
+            <h5>Standort</h5>
+            
+            
+            <div class="col-auto col-sm my-2">
+                <label class="visually-hidden" for="autoSizingInputGroup">City</label>
+                <div class="input-group">
+                    <div class="input-group-text"><i class="bi bi-geo-alt-fill"></i></div>
+                    <select class="form-select" aria-label="Default select example">
+                    <option selected>Wähle deine Stadt</option>
+                    <option value="1">Frankfurt</option>
+                    <option value="2">Düsseldorf</option>
+                    <option value="3">München</option>
+                    </select>
+                </div>
+
+            </div>
+                
+            <div class="col-auto col-sm  my-2">
+                <label class="visually-hidden" for="autoSizingInputGroup"> Building </label>
+                <div class="input-group">
+                    <div class="input-group-text"><i class="bi bi-house"></i></div>
+                    <select class="form-select" aria-label="Default select example">
+                    <option selected>Wähle deine Gebäude </option>
+                    <option value="1">Trianon</option>
+                    <option value="2">FBC</option>
+                    <option value="3">Skyper</option>
+                    </select>
+                </div>
+            </div>
+
+          </div>
+          <div class="col-auto col-sm">
+                <h5>Datum</h5>
+                
+                    <div class="input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-calendar-week-fill"></i>
+                        </span>
+                        <input data-datepicker="" class="form-control" id="birthday" type="text" placeholder="TT.MM.JJJJ" required>
+                    </div>
+    
+         </div>
+
+          <div class="col">
+            Column 3
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+    
+    
+
+</div>
