happyDesk to FleDeBob

--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -52,11 +52,167 @@
       </div>
 
 
-
-
-
-
     
     
 
 </div>
+
+
+
+<div class="card" style="width: 18rem;">
+    <div class="card-header">
+        Technische Austattung
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Mehr als 2 Monitore
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          ergonomische Maus rechts
+        </label>
+    </div>
+
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Dockingstation
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          XXX
+        </label>
+    </div>
+
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          ergonomische Maus links
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Großraum
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Einzelbüro
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Fenster
+        </label>
+    </div>
+
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Gang
+        </label>
+    </div>
+
+    <div class="card-header">
+        Sonstiges
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Fahrstuhlnähe
+        </label>
+    </div>
+
+
+
+
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Kantine im Gebäude
+        </label>
+    </div>
+
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Cafeteria im Gebäude
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          XXX
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          XXX
+        </label>
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          XXX
+        </label>
+    </div>
+
+</div>
+
+<div class="list-group">
+    <a href="#" class="list-group-item list-group-item-action active">
+      Bitte wählen Sie aus den folgenden Plätzen aus.
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">Arbeitsplatzname 1</a>
+    <a href="#" class="list-group-item list-group-item-action">Arbeitsplatzname 2</a>
+    <a href="#" class="list-group-item list-group-item-action">Arbeitsplatzname 3</a>
+    <a href="#" class="list-group-item list-group-item-action disabled">Arbeitsplatzname 4</a>
+  </div>
+
+  <div class="list-group">
+    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Arbeitsplatzkonfiguration 1</h5>
+        <small>insgesamt 25 verfügbar</small>
+      </div>
+      <p class="mb-1">Fenster, mindestens 2 Monitore, alle weiteren "tags"</p>
+    
+    </a>
+    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Arbeitsplatzkonfiguration 2</h5>
+        <small class="text-muted">insgesamt 35 verfügbar</small>
+      </div>
+      <p class="mb-1">tag, tag, tag, tag</p>
+    
+    </a>
+    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Arbeitsplatzkonfiguration 3</h5>
+        <small class="text-muted">insgesamt 20 verfügbar</small>
+      </div>
+      <p class="mb-1">tag, tag, tag, tag</p>
+    </a>
+  </div>
