--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
+<div class="card w-100 mt-3 mb-3 mh-1000">
+
 <form class="mx-auto">
     <h1 class="h3 mb-3 fw-normal">Ihre Nutzerkennung</h1>
 
@@ -17,3 +19,5 @@
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit" routerLink="/dialogue" (click)="loginService.login()">Anmelden</button>
   </form>
+ 
+</div>
