--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid container">
       <a class="navbar-brand" href="#">
         <img src="assets/bbk_logo.png" altwidth="30" height="30" alt="">
-          HappyDesk
+        FleDeBoB
       </a>
 
       <div class="d-flex">
