--- a/src/app/welcome-message/welcome-message.component.html
+++ b/src/app/welcome-message/welcome-message.component.html
@@ -1,7 +1,7 @@
 <div class="card w-100 mt-3 mb-3">
     <div class="card-body">
-      <h5 class="card-title"> Herzlich Willkommen beim HappyDesk! </h5>
-      <p class="card-text">Bitte melden Sie sich im Folgenden für den HappyDesk an, um sich Ihren Arbeitsplatz zuweisen zu können</p>
+      <h5 class="card-title"> Herzlich Willkommen bei FleDeBoB! </h5>
+      <p class="card-text">Bitte melden Sie sich im Folgenden für FleDeBoB an, um sich Ihren Arbeitsplatz zuweisen zu können</p>
       
       <div class="text-center">
         <a href="/login" class="btn btn-primary my-auto mx-auto btn-lg"> Anmelden </a>
