side by side elements

--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -57,18 +57,22 @@
 
 </div>
 
-
+<div class="row">
+  <div class="col-md-3">
 
 <div class="card" style="width: 18rem;">
     <div class="card-header">
         Technische Austattung
-    </div>
-    <div class="form-check">
+
+      <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
         <label class="form-check-label" for="flexCheckIndeterminate">
           Mehr als 2 Monitore
         </label>
+      </div>
+
     </div>
+    
 
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
@@ -77,28 +81,26 @@
         </label>
     </div>
 
-
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-        <label class="form-check-label" for="flexCheckIndeterminate">
-          Dockingstation
-        </label>
-    </div>
-
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-        <label class="form-check-label" for="flexCheckIndeterminate">
-          XXX
-        </label>
-    </div>
-
-
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
         <label class="form-check-label" for="flexCheckIndeterminate">
           ergonomische Maus links
         </label>
     </div>
+
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+      <label class="form-check-label" for="flexCheckIndeterminate">
+        Dockingstation
+      </label>
+  </div>
+
+  <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+      <label class="form-check-label" for="flexCheckIndeterminate">
+        XXX
+      </label>
+  </div>
 
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
@@ -121,7 +123,6 @@
         </label>
     </div>
 
-
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
         <label class="form-check-label" for="flexCheckIndeterminate">
@@ -139,17 +140,12 @@
         </label>
     </div>
 
-
-
-
-
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
         <label class="form-check-label" for="flexCheckIndeterminate">
           Kantine im Gebäude
         </label>
     </div>
-
 
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
@@ -179,17 +175,11 @@
         </label>
     </div>
 
+
 </div>
 
-<div class="list-group">
-    <a href="#" class="list-group-item list-group-item-action active">
-      Bitte wählen Sie aus den folgenden Plätzen aus.
-    </a>
-    <a href="#" class="list-group-item list-group-item-action">Arbeitsplatzname 1</a>
-    <a href="#" class="list-group-item list-group-item-action">Arbeitsplatzname 2</a>
-    <a href="#" class="list-group-item list-group-item-action">Arbeitsplatzname 3</a>
-    <a href="#" class="list-group-item list-group-item-action disabled">Arbeitsplatzname 4</a>
-  </div>
+</div>
+<div class="col">
 
   <div class="list-group">
     <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
@@ -216,3 +206,6 @@
       <p class="mb-1">tag, tag, tag, tag</p>
     </a>
   </div>
+
+</div>
+</div>
