--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="card w-100 mt-3 mb-3 mh-1000">
 
-<form class="mx-auto">
-    <h1 class="h3 mb-3 fw-normal">Ihre Nutzerkennung</h1>
+<form class="mx-auto my-4">
+    <h1 class="h3 mb-3 fw-normal">Anmeldung</h1>
 
-    <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@beispiel.de">
-      <label for="floatingInput">Email-Adresse</label>
+    <div class="form-floating py-1">
+      <input type="email" class="form-control" id="floatingInput" placeholder="up12345">
+      <label for="floatingInput">Nutzername</label>
     </div>
-    <div class="form-floating">
+    <div class="form-floating py-1">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Passwort">
       <label for="floatingPassword">Passwort</label>
     </div>
