ux layout improvements

--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -58,77 +58,79 @@
 </div>
 
 <div class="row">
-  <div class="col-md-3">
+<div class="col-md-3">
 
-<div class="card" style="width: 18rem;">
+<div class="card " >
     <div class="card-header">
         Technische Austattung
-
+    </div>
+    
+    <div class="mx-2">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
         <label class="form-check-label" for="flexCheckIndeterminate">
           Mehr als 2 Monitore
         </label>
       </div>
-
+      <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+          <label class="form-check-label" for="flexCheckIndeterminate">
+            ergonomische Maus rechts
+          </label>
+      </div>
+  
+      <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+          <label class="form-check-label" for="flexCheckIndeterminate">
+            ergonomische Maus links
+          </label>
+      </div>
+  
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+        <label class="form-check-label" for="flexCheckIndeterminate">
+          Dockingstation
+        </label>
     </div>
-    
-
+  
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
         <label class="form-check-label" for="flexCheckIndeterminate">
-          ergonomische Maus rechts
+          XXX
         </label>
     </div>
+  
+      <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+          <label class="form-check-label" for="flexCheckIndeterminate">
+            Großraum
+          </label>
+      </div>
+  
+      <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+          <label class="form-check-label" for="flexCheckIndeterminate">
+            Einzelbüro
+          </label>
+      </div>
+  
+      <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+          <label class="form-check-label" for="flexCheckIndeterminate">
+            Fenster
+          </label>
+      </div>
+  
+      <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+          <label class="form-check-label" for="flexCheckIndeterminate">
+            Gang
+          </label>
+      </div>
 
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-        <label class="form-check-label" for="flexCheckIndeterminate">
-          ergonomische Maus links
-        </label>
     </div>
 
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-      <label class="form-check-label" for="flexCheckIndeterminate">
-        Dockingstation
-      </label>
-  </div>
 
-  <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-      <label class="form-check-label" for="flexCheckIndeterminate">
-        XXX
-      </label>
-  </div>
-
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-        <label class="form-check-label" for="flexCheckIndeterminate">
-          Großraum
-        </label>
-    </div>
-
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-        <label class="form-check-label" for="flexCheckIndeterminate">
-          Einzelbüro
-        </label>
-    </div>
-
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-        <label class="form-check-label" for="flexCheckIndeterminate">
-          Fenster
-        </label>
-    </div>
-
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-        <label class="form-check-label" for="flexCheckIndeterminate">
-          Gang
-        </label>
-    </div>
 
     <div class="card-header">
         Sonstiges
