--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="card w-100 mt-3 mb-3 mh-1000">
+<div class="card w-100 mt-3 mb-3">
 
 <form class="mx-auto my-4">
     <h1 class="h3 mb-3 fw-normal">Anmeldung</h1>
@@ -18,6 +18,6 @@
       </label>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit" routerLink="/dialogue" (click)="loginService.login()">Anmelden</button>
-  </form>
+</form>
  
 </div>
