--- a/src/app/welcome-message/welcome-message.component.html
+++ b/src/app/welcome-message/welcome-message.component.html
@@ -1,4 +1,4 @@
-<div class="card w-100 mt-3 mb-3">
+<div class="card w-100 my-3">
     <div class="card-body">
       <h5 class="card-title"> Herzlich Willkommen bei FleDeBoB! </h5>
       <p class="card-text">Bitte melden Sie sich im Folgenden für FleDeBoB an, um sich Ihren Arbeitsplatz zuweisen zu können</p>
